AC_INIT([MyCpp], [0.1])

PKG_CHECK_MODULES(THIS, [glib-2.0 >= 2.0, gthread-2.0 >= 2.0, libmary-1.0 >= 0.1])
AC_SUBST(THIS_CFLAGS)
AC_SUBST(THIS_LIBS)

AM_INIT_AUTOMAKE([1.7 gnu nostdinc])


# _____________________________ --enable-memprof _______________________________

    AC_ARG_ENABLE([memprof],
		AC_HELP_STRING([--enable-memprof=@<:@yes/no@:>@],
			       [Enable MemProf [default=no]]),
		,
		[enable_memprof="no"])
    AM_CONDITIONAL(ENABLE_MEMPROF, test "x$enable_memprof" = "xyes")
#    AC_DEFUN(ENABLE_MEMPROF)

    if test "x$enable_memprof" = "xyes"; then
	AC_DEFINE([MYCPP_ENABLE_MEMPROF], [1], [ ])
    fi

# ______________________________________________________________________________


AC_PROG_CC
AC_PROG_CXX
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
#LT_INIT(win32-dll)

case "$host" in
  *-*-mingw*|*-*-cygwin*)
    platform_win32=yes
    ;;
  *)
    platform_win32=no
    ;;
esac
AM_CONDITIONAL(PLATFORM_WIN32, test x$platform_win32 = xyes)

#AC_CONFIG_HEADERS([config.h mycpp/mycpp_config.h config.h])
AC_CONFIG_HEADERS([config.h mycpp/mycpp_config.h])

AC_CONFIG_FILES([Makefile
		 mycpp/Makefile
		 mycpp-1.0.pc])
AC_OUTPUT

